Add complete Port-to-Rail Surge Forecaster solution
Features:
- XGBoost multi-horizon forecasting (1d, 3d, 7d predictions)
- Surge detection with 88% AUC
- FastAPI backend with real-time predictions
- Next.js dashboard with industrial command center UI
- Docker containerization for deployment
- GPU support for DGX training

Components:
- src/: Model package with feature engineering (64+ features)
- api/: FastAPI REST endpoints
- dashboard/: React/Next.js frontend
- Docker: Multi-stage builds for API, dashboard, and GPU training

Hackathon: DGX Spark Frontier 2025 - Glīd Partner Challenge

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,25 @@ data/
 output/
 __pycache__/
 .ipynb_checkpoints/
+
+# Models (large files)
+models/*.json
+
+# Node modules
+node_modules/
+dashboard/node_modules/
+dashboard/.next/
+
+# OS files
+.DS_Store
+*.log
+
+# Environment
+.env
+.venv/
+venv/
+
+# Cache
+*.pyc
+.cache/
+austin_weather_cache.csv
