--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,12 @@ pyarrow>=12.0.0
 # Machine Learning
 xgboost>=2.0.0
 scikit-learn>=1.3.0
+imbalanced-learn>=0.11.0  # For SMOTE oversampling
+
+# Advanced ML (optional)
+# lightgbm>=4.0.0
+# catboost>=1.2.0
+# optuna>=3.4.0  # For hyperparameter tuning
 
 # GPU Acceleration (optional - for DGX)
 # cudf-cu12>=24.0.0
