Add light theme and Docker containerization
- Switch dashboard to professional light theme
- Update all components with light color palette
- Improve Docker setup for both API and dashboard
- Add healthchecks and proper environment variables
- Fix docker-compose configuration

--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,4 +1,5 @@
 # Next.js Dashboard for Port-to-Rail Surge Forecaster
+# DGX Spark Frontier Hackathon 2025
 
 FROM node:20-alpine AS builder
 
@@ -13,7 +14,11 @@ RUN npm ci
 # Copy source
 COPY . .
 
-# Build
+# Set build-time environment variable for API URL
+ARG NEXT_PUBLIC_API_URL=http://api:8000
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+
+# Build the application
 RUN npm run build
 
 # Production stage
@@ -22,12 +27,27 @@ FROM node:20-alpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV=production
+ENV HOSTNAME="0.0.0.0"
+ENV PORT=3000
 
-# Copy built assets
+# Install wget for healthcheck and create non-root user
+RUN apk add --no-cache wget && \
+    addgroup --system --gid 1001 nodejs && \
+    adduser --system --uid 1001 nextjs
+
+# Copy built assets from builder
 COPY --from=builder /app/.next/standalone ./
 COPY --from=builder /app/.next/static ./.next/static
-COPY --from=builder /app/public ./public
+
+# Set correct permissions
+RUN chown -R nextjs:nodejs /app
+
+USER nextjs
 
 EXPOSE 3000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
+    CMD wget --no-verbose --tries=1 --spider http://localhost:3000/ || exit 1
 
 CMD ["node", "server.js"]
