--- a/.dockerignore
+++ b/.dockerignore
@@ -2,12 +2,10 @@
 .git
 .gitignore
 
-# Data (mount as volumes instead)
+# Data (raw data - mount as volumes if needed)
 data/
-output/
-models/
 
-# Node
+# Node (dashboard has its own .dockerignore)
 node_modules/
 dashboard/node_modules/
 dashboard/.next/
@@ -27,10 +25,13 @@ venv/
 .DS_Store
 *.log
 
-# Docs
+# Docs (keep README)
 *.md
 !README.md
 
 # Tests
 tests/
 *.test.*
+
+# Frontend (built separately)
+frontend/
