--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # FastAPI Backend
   api:
@@ -27,14 +25,22 @@ services:
     build:
       context: ./dashboard
       dockerfile: Dockerfile
+      args:
+        # Browser accesses API via exposed port on host
+        - NEXT_PUBLIC_API_URL=http://localhost:8000
     container_name: portsurge-dashboard
     ports:
       - "3000:3000"
     environment:
-      - NEXT_PUBLIC_API_URL=http://api:8000
+      - NEXT_PUBLIC_API_URL=http://localhost:8000
     depends_on:
       api:
         condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     restart: unless-stopped
 
   # GPU Training - Enhanced Model
